[project]
name = "PyVISA-py"
description = "Pure Python implementation of a VISA library."
readme = "README.rst"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
  {name = "Hernan E. Grecco", email = "hernan.grecco@gmail.com"},
]
maintainers = [
  {name = "Matthieu C. Dartiailh", email = "m.dartiailh@gmail.com"}
]
keywords = [
    "VISA",
    "GPIB",
    "USB",
    "serial",
    "RS232",
    "measurement",
    "acquisition",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyvisa>=1.13.0",
    "typing_extensions",
]
dynamic=["version"]

[project.optional-dependencies]
gpib-ctypes = ["gpib-ctypes>=0.3.0"]
serial = ["pyserial>=3.0"]
usb = ["pyusb"]
psutil = ["psutil"]
hislip-discovery = ["zeroconf"]
vicp = ["pyvicp", "zeroconf"]


[project.urls]
homepage = "https://github.com/pyvisa/pyvisa-py"
documentation = "https://pyvisa-py.readthedocs.io/en/latest/"
repository = "https://github.com/pyvisa/pyvisa-py"
changelog = "https://github.com/pyvisa/pyvisa-py/blob/main/CHANGES"

[build-system]
requires = ["setuptools>=61.2", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "pyvisa_py/version.py"
write_to_template = """
# This file is auto-generated by setuptools-scm do NOT edit it.

from collections import namedtuple

#: A namedtuple of the version info for the current release.
_version_info = namedtuple("_version_info", "major minor micro status")

parts = "{version}".split(".", 3)
version_info = _version_info(
    int(parts[0]),
    int(parts[1]),
    int(parts[2]),
    parts[3] if len(parts) == 4 else "",
)

# Remove everything but the 'version_info' from this module.
del namedtuple, _version_info, parts

__version__ = "{version}"
"""

[tool.black]
line-length = 88  # Enforce the default value

[tool.pytest.ini_options]
minversion = "6.0"

[tool.mypy]
follow_imports = "normal"
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "usb.*",
    "serial.*",
    "gpib.*",
    "Gpib.*",
    "gpib_ctypes.*",
    "pyvicp.*",

]
ignore_missing_imports = true

[tool.isort]
profile = "black"
combine_as_imports = true
