[metadata]
name = PyVISA-py
version = 0.4.0.dev
author = Hernan E. Grecco
author_email = hernan.grecco@gmail.com
maintainer = Hernan E. Grecco
maintainer_email = hernan.grecco@gmail.com
license = MIT License
description = Python VISA bindings for GPIB, RS232, and USB instruments
keywords =
    Remote
    VISA
    GPIB
    USB
    serial
    RS232
    measurement
    acquisition
url = https://github.com/pyvisa/pyvisa-py
long_description = file: README.rst, AUTHORS, CHANGES
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
platforms = Linux; Windows; Mac

[options]
packages =
    pyvisa-py
    pyvisa-py.protocols
    pyvisa-py.testsuite
zip_safe = False
install_requires = pyvisa>=1.8
setup_requires = setuptools>=42; wheel; setuptools_scm[toml]>=3.4.3
use_2to3 = False

[check-manifest]
ignore =
    .travis.yml
    tox.ini
