[metadata]
name = PyVISA-py
author = Hernan E. Grecco
author_email = hernan.grecco@gmail.com
maintainer = Hernan E. Grecco
maintainer_email = hernan.grecco@gmail.com
license = MIT License
description = Python VISA bindings for GPIB, RS232, and USB instruments
keywords =
    Remote
    VISA
    GPIB
    USB
    serial
    RS232
    measurement
    acquisition
url = https://github.com/pyvisa/pyvisa-py
long_description = file: README.rst, AUTHORS, CHANGES
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
platforms = Linux; Windows; Mac

[options]
packages =
    pyvisa_py
    pyvisa_py.protocols
    pyvisa_py.testsuite
zip_safe = False
install_requires =
    pyvisa>1.10.1
    typing_extensions
    importlib-metadata; python_version<"3.8"
setup_requires = setuptools>=42; wheel; setuptools_scm[toml]>=3.4.3
use_2to3 = False

[options.extras_require]
gpib-ctypes = gpib-ctypes>=0.3.0
serial = pyserial>=3.0
usb = pyusb

[flake8]
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist,
ignore = E203, E266, E501, W503, E731
# line length is intentionally set to 80 here because pyvisa uses Bugbear
# See https://github.com/psf/black/blob/master/README.md#line-length for more details
max-line-length = 80
max-complexity = 18
select = B,C,E,F,W,T4,B9
per-file-ignores =
    pyvisa_py/protocols/vxi11.py:E221
    pyvisa_py/serial.py:C901

[mypy]
follow_imports = normal
strict_optional = True

[mypy-usb.*]
ignore_missing_imports = True

[mypy-serial.*]
ignore_missing_imports = True

[mypy-gpib.*]
ignore_missing_imports = True

[mypy-Gpib.*]
ignore_missing_imports = True

[mypy-gpib_ctypes.*]
ignore_missing_imports = True

# XXX Ideally remove once pytest ships typing information
[mypy-pytest.*]
ignore_missing_imports = True

[isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
skip = pyvisa-py/__init__.py
known_third_party = numpy,setuptools,typing_extensions,pyvisa,pytest
